@@ -5,5 +5,8 @@ Release history for {{ $dist->name }}:
   - Pod::Weaver::Section::Requirements will refer uses to the `cpanfile` or `META.json/yml` files for the full list of
     prerequisites.
 
+  [Documentation]
+  - Added a sample of what the INSTALLATION section looks like.
+
 v0.1.0    2025-08-01 14:44:05+01:00 Europe/London
   - Initial version released.
